Add drivers for ADC PA6

--- a/stm32f446re_FreeRTOS_queue.ioc
+++ b/stm32f446re_FreeRTOS_queue.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configUSE_TIMERS
 FREERTOS.Queues01=uartQueue,10,char *,0,Dynamic,NULL,NULL;cmdQueue,10,CMD_t *,0,Dynamic,NULL,NULL
@@ -8,28 +14,31 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP0=ADC1
+Mcu.IP1=FREERTOS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
 Mcu.Pin2=PA5
-Mcu.Pin3=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin4=VP_RTC_VS_RTC_Activate
-Mcu.Pin5=VP_RTC_VS_RTC_Calendar
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin3=PA6
+Mcu.Pin4=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin5=VP_RTC_VS_RTC_Activate
+Mcu.Pin6=VP_RTC_VS_RTC_Calendar
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -61,6 +70,8 @@ PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=ADCx_IN6
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -112,6 +123,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
