Add ADC periodic measurement w/ freq changing

--- a/stm32f446re_FreeRTOS_queue.ioc
+++ b/stm32f446re_FreeRTOS_queue.ioc
@@ -6,9 +6,10 @@ ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configUSE_TIMERS
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configUSE_TIMERS,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
 FREERTOS.Queues01=uartQueue,10,char *,0,Dynamic,NULL,NULL;cmdQueue,10,CMD_t *,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=menuDisplayTask,-1,512,StartMenuTask,Default,NULL,Dynamic,NULL,NULL;cmdHandlingTask,0,512,StartCmdHandling,Default,NULL,Dynamic,NULL,NULL;cmdProcessingTa,0,512,StartCmdProcessing,Default,NULL,Dynamic,NULL,NULL;uartWriteTask,0,512,StartUartWrite,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=3
 FREERTOS.configUSE_TIMERS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -38,7 +39,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
-NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.ADC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -52,7 +53,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true
-NVIC.USART2_IRQn=true\:5\:0\:false\:true\:true\:1\:true\:true\:true
+NVIC.USART2_IRQn=true\:10\:0\:true\:true\:true\:1\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PA2.GPIO_PuPd=GPIO_PULLUP
@@ -100,7 +101,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=16000000
 RCC.FamilyName=M
